[package]
name = "preach"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DouglasDwyer/preach"
readme = "README.md"
description = """
Platform independent data channels for WebRTC/Rust.
"""

[dependencies]
arc-swap = "1.6.0"
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.30"

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
datachannel = { version = "0.9.0", features = [ "vendored" ] }
webrtc-sdp = "0.3.9"

[dev-dependencies]
tokio = { version = "1.27.0", features = [ "macros", "rt" ] }