[package]
name = "preach"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DouglasDwyer/preach"
readme = "README.md"
description = """
Platform independent data channels for WebRTC/Rust.
"""

[dependencies]
arc-swap = "1.6.0"
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.30"

[dev-dependencies]
tokio = { version = "1.27.0", features = [ "macros", "rt" ] }

[features]
vendored = [ "datachannel/vendored" ]
wasm_main_executor = [ "dep:wasm_main_executor" ]

[lib]
doctest = false

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
datachannel = "0.9.0"
webrtc-sdp = "0.3.9"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.57"
send_wrapper = "0.6.0"
wasm-bindgen = "0.2.76"
wasm-bindgen-futures = "0.4.30"
wasm_main_executor = { version = "0.1.0", optional = true }
web-sys = { version = "0.3.24", features = [
    "MessageEvent",
    "RtcConfiguration",
    "RtcDataChannel",
    "RtcDataChannelEvent",
    "RtcDataChannelInit",
    "RtcDataChannelType",
    "RtcIceCandidate",
    "RtcIceCandidateInit",
    "RtcIceConnectionState",
    "RtcIceServer",
    "RtcIceTransportPolicy",
    "RtcOfferOptions",
    "RtcPeerConnection",
    "RtcPeerConnectionIceEvent",
    "RtcSessionDescription",
    "RtcSessionDescriptionInit", 
    "RtcSdpType",
    "RtcSignalingState",
    "Window"
] }